@@ -1,13 +1,0 @@
-[Core]
-name = bootswatch_theme
-module = bootswatch_theme
-
-[Documentation]
-author = Roberto Alsina
-version = 1.0
-website = https://getnikola.com/
-description = Given a swatch name and a parent theme, creates a custom theme.
-
-[Nikola]
-PluginCategory = Command
-
